
  ZOOKEEPER-2213: Empty path in Set crashes server and prevents restart
  (Hongchao Deng via rgs)

  ZOOKEEPER-706: Large numbers of watches can cause session re-establishment to fail
  (Chris Thunes via rgs)

  ZOOKEEPER-602: log all exceptions not caught by ZK threads
  (Rakesh R via rgs)

  ZOOKEEPER-2224: Four letter command hangs when network is slow
  (Arshad Mohammad via rgs)

IMPROVEMENTS:

  ZOOKEEPER-1575. adding .gitattributes to prevent CRLF and LF mismatches for
  source and text files (Raja Aluri via michim)

  ZOOKEEPER-657. Cut down the running time of ZKDatabase corruption
  (Michi Mutsuzaki via rakeshr)

  ZOOKEEPER-1746. AsyncCallback.*Callback don't have any Javadoc
  (Hongchao Deng via phunt)

  ZOOKEEPER-1917. Apache Zookeeper logs cleartext admin passwords (fpj via michim)

  ZOOKEEPER-1948 Enable JMX remote monitoring (Biju Nair via rakeshr)

  ZOOKEEPER-2126 Improve exit log messsage of EventThread and SendThread by
  adding SessionId (surendra singh lilhore via rakeshr)

  ZOOKEEPER-2124 Allow Zookeeper version string to have underscore '_'
  (Chris Nauroth via michim)

  ZOOKEEPER-2205: Log type of unexpected quorum packet in learner handler loop
  (Hitoshi Mitake via rgs)

Release 3.4.6 - 2014-03-10 

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1900. NullPointerException in truncate (Camille Fournier)

  ZOOKEEPER-1474. Cannot build Zookeeper with IBM Java: use of Sun
  MXBean classes (Adalberto Medeiros via phunt)

  ZOOKEEPER-1596. Zab1_0Test should ensure that the file is closed
  (Enis Soztutar via phunt)

  ZOOKEEPER-1513. "Unreasonable length" exception while starting a
  server (Skye W-M via phunt)

  ZOOKEEPER-1581. change copyright in notice to 2012 (breed via phunt)

  ZOOKEEPER-753. log4j dependency in the pom needs to have exclusion
  lists (Sean Busbey via phunt)

  ZOOKEEPER-1553. Findbugs configuration is missing some dependencies
  (Sean Busbey via phunt)
