@@ -749,12 +749,14 @@ xmlns:maven="antlib:org.apache.maven.artifact.ant">
       </copy>
 
       <copy todir="${dist.dir}">
-        <fileset dir=".">
-          <include name="*.txt" />
-        </fileset>
+        <fileset file="CHANGES.txt"/>
+        <fileset file="README.txt"/>
+        <fileset file="README_packaging.txt"/>
         <fileset file="build.xml"/>
         <fileset file="ivy.xml"/>
         <fileset file="ivysettings.xml"/>
+        <fileset file="src/NOTICE.txt"/>
+        <fileset file="src/LICENSE.txt"/>
       </copy>
 
       <copy todir="${dist.dir}/src" includeEmptyDirs="true">
@@ -864,12 +866,14 @@ xmlns:maven="antlib:org.apache.maven.artifact.ant">
       </copy>
 
       <copy todir="${dist.dir}">
-        <fileset dir=".">
-          <include name="*.txt" />
-        </fileset>
+        <fileset file="CHANGES.txt"/>
+        <fileset file="README.txt"/>
+        <fileset file="README_packaging.txt"/>
         <fileset file="build.xml"/>
         <fileset file="ivy.xml"/>
         <fileset file="ivysettings.xml"/>
+        <fileset file="src/NOTICE.txt"/>
+        <fileset file="src/LICENSE.txt"/>
       </copy>
 
       <copy todir="${dist.dir}/src" includeEmptyDirs="true">
