@@ -1,0 +1,6 @@
+Apache ZooKeeper
+Copyright 2009-2015 The Apache Software Foundation
+
+This product includes software developed at
+The Apache Software Foundation (http://www.apache.org/).
+
